# rs8086

./: .gitignore  Cargo.toml  README.md  build-tests-isa.sh
docs/: ISA.md
src/as/: main.rs
src/dis/: dis.rs  main.rs
src/emu/: dis.rs  emu.rs  main.rs
src/emu/x86/: args.rs  cfg.rs  dump.rs  exec.rs  io.rs  mem.rs  mod.rs
src/emu/x86/hw/: mod.rs  ram.rs  rom.rs
src/lib/: dec.rs  lib.rs  op.rs
tests/: 1.asm  README.md  error.asm  expect.inc  init.asm
tests/isa/: aaa.asm  aad.asm  aam.asm  aas.asm  adc.asm  add.asm  and.asm  cbw.asm  clc.asm  cld.asm  cli.asm  cmc.asm  cmp.asm  cwd.asm  nop.asm  pop.asm  push.asm  sbb.asm  stc.asm  std.asm  sti.asm  sub.asm  xor.asm
